fixed cropper

--- a/ImagingServer/server/static/css/style.css
+++ b/ImagingServer/server/static/css/style.css
@@ -86,7 +86,7 @@ nav form {
 #focused {
   max-width: 100%;
   max-height: 100%;
-  height: auto;
+  /*height: auto;*/
 }
 
 .thumb-div {
